--- a/src/App.css
+++ b/src/App.css
@@ -29,16 +29,20 @@
 
 .content-label, .aor-field-score\.unaware label span {
   color: #f9b625;
+  font-weight: bold;
 }
 
 .curious-label, .aor-field-score\.curious label span {
   color: #dd7d1b;
+  font-weight: bold;
 }
 
 .follower-label, .aor-field-score\.follower label span {
   color: #3eb1c8;
+  font-weight: bold;
 }
 
 .guide-label, .aor-field-score\.guide label span {
   color: #007398;
+  font-weight: bold;
 }
