--- a/src/App.css
+++ b/src/App.css
@@ -27,22 +27,22 @@
   to { transform: rotate(360deg); }
 }
 
-.content-label, .aor-field-score\.unaware label span {
+.content-label, .aor-field-score\.unaware label span, button[data-sort='score.unaware'] span {
   color: #f9b625;
   font-weight: bold;
 }
 
-.curious-label, .aor-field-score\.curious label span {
+.curious-label, .aor-field-score\.curious label span, button[data-sort='score.curious'] span {
   color: #dd7d1b;
   font-weight: bold;
 }
 
-.follower-label, .aor-field-score\.follower label span {
+.follower-label, .aor-field-score\.follower label span, button[data-sort='score.follower'] span {
   color: #3eb1c8;
   font-weight: bold;
 }
 
-.guide-label, .aor-field-score\.guide label span {
+.guide-label, .aor-field-score\.guide label span, button[data-sort='score.guide'] span {
   color: #007398;
   font-weight: bold;
 }
