--- a/src/App.css
+++ b/src/App.css
@@ -27,32 +27,6 @@
   to { transform: rotate(360deg); }
 }
 
-.content-label {
-  color: #f9b625;
-  font-weight: bold;
-}
-
-.curious-label {
-  color: #dd7d1b;
-  font-weight: bold;
-}
-
-.follower-label {
-  color: #3eb1c8;
-  font-weight: bold;
-}
-
-.guide-label {
-  color: #007398;
-  font-weight: bold;
-}
-
-.hostile-label,
-.contextualized-label,
-.seeker-label,
-.believer-label,
-.learner-label,
-.new-disciple-label,
-.engaged-disciple-label {
+.keyword-label {
   font-weight: bold;
 }
