--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,11 @@
   font-weight: bold;
 }
 
+.indented-paragraph {
+  padding-left: 20px;
+  padding-right: 50px;
+}
+
 .modals {
   position: fixed;
   top: 0;
